@@ -1,6 +1,7 @@
 0.4
 	- Renamed project to ``webassets``, no longer Django specific;
 	  instead, the Django app is an optional addon.
+	- Got rid of the ASSETS_AUTO_CREATE option.
 
 
 0.3 (unreleased)
